FIX: Fixed visibility problem of the anchor

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -114,19 +114,26 @@ footer {
     position: fixed;
     bottom: 20px;
     right: 40px;
-    width: 60px; /* Ajusta el ancho del contenedor según tus necesidades */
-    height: 60px;
+    width: 40px;
+    height: 40px;
+    background-color: rgba(255, 255, 255, 0.479);
+    border-radius: 50%;
+    transition: all .2s ease;
+}
+
+#goUp:hover{
+    transform: scale(1.2);
 }
 
 #goUp a{
     display: flex;
     width: 100%;
     height: 100%;
-    }
+}
 
 #goUp a img{
     width: 100%;
-    filter: opacity(30%) ;
+    filter: opacity(50%) ;
 }
 
 
